--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 	<title>Le Grand Breguet</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="images/favicon/site.webmanifest">
+	<link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="shortcut icon" href="images/favicon/favicon.ico">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-config" content="images/favicon/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
+
 </head>
 <body>
 
@@ -12,13 +22,14 @@
 		<div class="space"></div>
 		<img src="images/logo.png">
 
-		<p id="description">Restaurant - bar à tapas biologique<br>
-		Ouvert 7j sur 7</p>
+		<p id="description" class="text-bold">Restaurant - Bar<br>
+		Biologique // fait maison</p>
 		<p id="adress"><a href="https://goo.gl/maps/3p9yyfnYJCB2">17 rue Breguet<br>
 		75011 Paris</a></p>
 		<p id="phone-number"><a href="tel:09 70 75 54 59" class="cl-effect-14"><i class="fas fa-phone"></i> 09 70 75 54 59</a></p>
 
-		<p id="hours">Lundi à mercredi : 8h <i class="fas fa-long-arrow-alt-right"></i> 0h<br>
+		<p id="hours"><span class="text-bold">Ouvert 7j sur 7</span><br>
+		Lundi à mercredi : 8h <i class="fas fa-long-arrow-alt-right"></i> 0h<br>
 		Jeudi à samedi : 8h <i class="fas fa-long-arrow-alt-right"></i> 2h<br>
 		Dimanche : 8h <i class="fas fa-long-arrow-alt-right"></i> 20h</p>
 
