--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 			Biologique // fait maison</p>
 			<p id="adress"><a href="https://goo.gl/maps/3p9yyfnYJCB2">17 rue Breguet<br>
 			75011 Paris</a></p>
-			<p id="phone-number"><a href="tel:09 70 75 54 59" class="cl-effect-14"><i class="fas fa-phone"></i> 09 70 75 54 59</a></p>
+			<p id="phone-number"><a href="tel:01 43 55 74 92" class="cl-effect-14"><i class="fas fa-phone"></i>01 43 55 74 92</a></p>
 
 			<p id="hours"><span class="text-bold">Ouvert 7j sur 7</span><br>
 			Lundi à mercredi : 8h <i class="fas fa-long-arrow-alt-right"></i> 0h<br>
 			Jeudi à samedi : 8h <i class="fas fa-long-arrow-alt-right"></i> 2h<br>
-			Dimanche : 8h <i class="fas fa-long-arrow-alt-right"></i> 20h</p>
+			Dimanche : 10h <i class="fas fa-long-arrow-alt-right"></i> 18h</p>
 
 			<p id="font-awesome">
-				<a href="https://www.facebook.com/LeBreguetBio/"><i class="fab fa-facebook-f"></i></a>&nbsp;&nbsp;
+				<a href="https://www.facebook.com/LeGrandbreguet/"><i class="fab fa-facebook-f"></i></a>&nbsp;&nbsp;
 				<a href="https://www.instagram.com/legrandbreguet/"><i class="fab fa-instagram"></i></a><br><br>
 				<a href="mailto:reservation@legrandbreguet.com"><i class="fas fa-utensils"></i></a><br><br>
 				<a href="mailto:vincent@legrandbreguet.com"><i class="far fa-newspaper"></i></a>
