--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			<p id="phone-number"><a href="tel:01 43 55 74 92" class="cl-effect-14"><i class="fas fa-phone"></i>01 43 55 74 92</a></p>
 
 			<p id="hours"><span class="text-bold">Ouvert 7j sur 7</span><br>
-			Lundi à mercredi : 8h <i class="fas fa-long-arrow-alt-right"></i> 0h<br>
-			Jeudi à samedi : 8h <i class="fas fa-long-arrow-alt-right"></i> 2h<br>
-			Dimanche : 10h <i class="fas fa-long-arrow-alt-right"></i> 18h</p>
+			Lundi à mercredi : 8h30-00h <br>
+			Jeudi à samedi : 8h30-17h30/18h00-1h30 <i class="fas fa-long-arrow-alt-right"></i> 2h<br>
+			Dimanche : fermé </p>
 
 			<p id="font-awesome">
 				<a href="https://www.facebook.com/LeGrandbreguet/"><i class="fab fa-facebook-f"></i></a>&nbsp;&nbsp;
