--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
 			<div class="space"></div>
 			<img src="images/logo.png">
 
-			<p id="description" class="text-bold">Restaurant - Bar<br>
-			Biologique // fait maison</p>
+			<p id="description" class="text-bold">Restaurant / 100% bio / bar dansant<br>
 			<p id="adress"><a href="https://goo.gl/maps/3p9yyfnYJCB2">17 rue Breguet<br>
 			75011 Paris</a></p>
-			<p id="phone-number"><a href="tel:01 43 55 74 92" class="cl-effect-14"><i class="fas fa-phone"></i>01 43 55 74 92</a></p>
+			<p id="phone-number"><a href="tel:01 43 55 74 92" class="cl-effect-14"><i class="fas fa-phone"></i>01.43.55.74.92</a></p>
 
 			<p id="hours"><span class="text-bold">Ouvert 7j sur 7</span><br>
-			Lundi à mercredi : 8h30-00h <br>
-			Jeudi à samedi : 8h30-17h30/18h00-1h30 <i class="fas fa-long-arrow-alt-right"></i> 2h<br>
-			Dimanche : fermé </p>
+			Lundi à mercredi : 8h30-00h<br>
+			Jeudi à samedi : 8h30-17h30/18h00-1h30<i class="fas fa-long-arrow-alt-right"></i> 2h<br>
+			Dimanche : fermé</p>
 
 			<p id="font-awesome">
 				<a href="https://www.facebook.com/LeGrandbreguet/"><i class="fab fa-facebook-f"></i></a>&nbsp;&nbsp;
