--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
 
 			<p id="hours"><span class="text-bold">Ouvert 7j sur 7</span><br>
 			Lundi à mercredi : 8h30-00h<br>
-			Jeudi à samedi : 8h30-17h30/18h00-1h30<i class="fas fa-long-arrow-alt-right"></i> 2h<br>
+			Jeudi à samedi : 8h30-17h30/18h00-1h30<br>
 			Dimanche : fermé</p>
 
 			<p id="font-awesome">
 				<a href="https://www.facebook.com/LeGrandbreguet/"><i class="fab fa-facebook-f"></i></a>&nbsp;&nbsp;
 				<a href="https://www.instagram.com/legrandbreguet/"><i class="fab fa-instagram"></i></a><br><br>
-				<a href="mailto:reservation@legrandbreguet.com"><i class="fas fa-utensils"></i></a><br><br>
 				<a href="mailto:vincent@legrandbreguet.com"><i class="far fa-newspaper"></i></a>
 			</p>
 		</div>
